@@ -874,6 +874,20 @@ namespace tgui
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+        Layout bindInnerWidth(Container::Ptr container)
+        {
+            return Layout{Layout::Operation::BindingInnerWidth, container.get()};
+        }
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+        Layout bindInnerHeight(Container::Ptr container)
+        {
+            return Layout{Layout::Operation::BindingInnerHeight, container.get()};
+        }
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
         Layout bindRight(Widget::Ptr widget)
         {
             return Layout{Layout::Operation::Plus,
@@ -902,6 +916,13 @@ namespace tgui
         Layout2d bindSize(Widget::Ptr widget)
         {
             return {bindWidth(widget), bindHeight(widget)};
+        }
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+        Layout2d bindInnerSize(Container::Ptr container)
+        {
+            return {bindInnerWidth(container), bindInnerHeight(container)};
         }
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
