@@ -9,6 +9,7 @@ TGUI 0.8.8  (TBD)
 - Made updateTime() in Gui public and let it return if something changed
 - Picture had wrong size when loading from file with a relative size
 - String to float conversion could fail since 0.8.6 when C locale was changed
+- Added bind functions to layouts to bind to inner size
 
 
 TGUI 0.8.7  (8 February 2020)
